--- a/example/index.html
+++ b/example/index.html
@@ -3,6 +3,31 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Zettly Editor example showcasing the rich text editing experience."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Zettly Editor Example" />
+    <meta
+      property="og:description"
+      content="Explore the Zettly Editor demo with collaborative features and modern UI."
+    />
+    <meta property="og:url" content="https://zettly-editor.programinglive.com/" />
+    <meta
+      property="og:image"
+      content="https://zettly-editor.programinglive.com/og-image.jpg"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Zettly Editor Example" />
+    <meta
+      name="twitter:description"
+      content="Explore the Zettly Editor demo with collaborative features and modern UI."
+    />
+    <meta
+      name="twitter:image"
+      content="https://zettly-editor.programinglive.com/og-image.jpg"
+    />
     <title>Zettly Editor Example</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
