--- a/example/index.html
+++ b/example/index.html
@@ -28,6 +28,11 @@
       name="twitter:image"
       content="https://zettly-editor.programinglive.com/og-image.jpg"
     />
+    <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/favicon-16x16.png" />
+    <link rel="icon" href="/src/assets/favicon.ico" />
+    <link rel="manifest" href="/src/assets/site.webmanifest" />
     <title>Zettly Editor Example</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
