chore: polish marketing copy and docs

--- a/example/index.html
+++ b/example/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Zettly Editor example showcasing the rich text editing experience."
+      content="Build polished notes, docs, and knowledge bases in minutes—experience the Zettly Editor demo and ship rich text faster."
     />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Zettly Editor Example" />
